syntax = "proto3";
package dos;

// Message sent from player client when the player has chosen a name and is
// ready.
message ReadyMessage {
	// The name of the player.
	string name = 1;
}

